fix: add z-index to nav

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -299,6 +299,7 @@ nav {
   border-bottom: 4px solid darken($lightgreen, 20%);
   background: $darkgreen;
   padding-bottom: 0.1em;
+  z-index: 9;
 }
 
 //nav
